优化依赖项，修改版本号，修改警告项